--- a/home-ii.html
+++ b/home-ii.html
@@ -76,7 +76,7 @@
                                                 <div class="dropdown mini-nav"> <a href="tel:9851108896" class="nav-link"><i class="fa-solid fa-phone"></i> 9851108896</a> </div>
                                             </li>
                                             <li>
-                                                <div class="dropdown mini-nav mini-nav-no-bg-hover"> <a href="mailto:youremail@Excursion.com" class="nav-link"><i class="fa-solid fa-envelope"></i> youremail@Excursion.com</a> </div>
+                                                <div class="dropdown mini-nav mini-nav-no-bg-hover"> <a href="mailto:youremail@Excursion.com" class="nav-link"><i class="fa-solid fa-envelope"></i> youremail@excursion.com</a> </div>
                                             </li>
                                         </ul>
                                     </div>
@@ -235,23 +235,45 @@
             
             <!--/header of the page -->
             <main>
-                <!-- visual/banner of the page -->
-               <section>
-                
-               </section>
-                <!--/visual/banner of the page -->
+                <!-- Banner -->
+                <section class="banner home-ii">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-8 align-self-center">
+                               <div class="banner-text">
+                                <h1>Lorem ipsum dolor consectetur adipisicing elit.</h1>
+                                <p>Omnis in ipsa qui! Labore, assumenda tenetur ut vitae molestiae repudiandae totam sed minima obcaecati esse amet similique quia adipisci commodi quo?</p>
+                                <a class="btn btn-primary has-radius-small mt-4" href="/">Read More</a>
+                               </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <form>
+                                    <h3 class="m-0">Inquiry Form</h3>
+                                    <input type="text" placeholder="First Name" required >
+                                    <input type="text" placeholder="Last Name" required >
+                                    <input type="email" placeholder="Mail" required >
+                                    <input type="number" placeholder="Phone" required >
+                                    <textarea placeholder="Message"></textarea>
+                                    <input type="submit" class="btn btn-primary has-radius-small">
+
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <!--/Banner -->
                 <!-- main content wrapper -->
                 <div class="content-wrapper">
                     <section class="content-block">
                         <div class="container">
                             <div class="content-slot alternate-block-v2">
                                 <div class="row">
-                                    <div class="col-lg-6">
+                                    <div class="col-lg-6 align-self-center">
                                         <div class="text-wrap">
-                                            <h3>The Art.</h3>
+                                            <h2>The Art.</h2>
                                             <p><span>When you have limited space to showcase work.</span></p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">DESIGNS</a></div>
+                                            <div class="mt-4"><a href="#" class="btn btn-primary has-radius-small">Read More</a></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
@@ -261,12 +283,12 @@
                                     </div>
                                 </div>
                                 <div class="row">
-                                    <div class="col col-lg-6">
+                                    <div class="col col-lg-6 align-self-center">
                                         <div class="text-wrap text-lg-right">
-                                            <h3>The Code.</h3>
+                                            <h2>The Code.</h2>
                                             <p><span>Excursion is thoroughly tested for code and speed.</span></p>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,</p>
-                                            <div class="mt-5"><a href="#" class="btn btn-primary has-radius-small">PROGRAMS</a></div>
+                                            <div class="mt-4aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"><a href="#" class="btn btn-primary has-radius-small">Read More</a></div>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 text-right">
@@ -278,29 +300,6 @@
                             </div>
                         </div>
                     </section>
-                    <aside class="content-block">
-                        <div class="container">
-                            <div class="logo-container">
-                                <div class="owl-carousel logo-slide" id="Excursion-owl-slide-4">
-                                    <div class="slide-item">
-                                        <img src="img/logo-01.png" alt="images description">
-                                    </div>
-                                    <div class="slide-item">
-                                        <img src="img/logo-02.png" alt="images description">
-                                    </div>
-                                    <div class="slide-item">
-                                        <img src="img/logo-03.png" alt="images description">
-                                    </div>
-                                    <div class="slide-item">
-                                        <img src="img/logo-04.png" alt="images description">
-                                    </div>
-                                    <div class="slide-item">
-                                        <img src="img/logo-03.png" alt="images description">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </aside>
                 </div>
                 <!--/main content wrapper -->
             </main>
