--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                             <div class="row multiple-row v-align-row">
                                 <div class="col-md-12">
                                     <div class="bottom-space text-center"> <span class="big">Sub Heading</span>
-                                        <h2><span class="heading-decore">Package </span></h2>
+                                        <h2><span class="heading-decore">Adventure Packages </span></h2>
                                     </div>
                                 </div>
                                 <div class="col-md-6 col-lg-3">
@@ -354,10 +354,10 @@
                     </section>
                     <section class="content-block portfolio-block" id="container">
                         <div class="bottom-space text-center"> <span class="big">Sub Heading</span>
-                            <h2><span class="heading-decore">Activity </span></h2>
+                            <h2><span class="heading-decore">Adventure Activity </span></h2>
                         </div>
                         <ul class="filter-nav text-center button-group filter-button-group">
-                            <li> <button data-filter="*">ALL</button> </li>
+                            <li> <button data-filter="*">All</button> </li>
                             <li> <button data-filter=".first">Rock Climbing</button> </li>
                             <li> <button data-filter=".second">Sky Diving</button> </li>
                             <li> <button data-filter=".third">Surfing</button> </li>
@@ -420,34 +420,22 @@
                                 <div class="col-md-6">
                                     
                                     <div class="row">
-                                        <div class="col-sm-12">
+                                        <div class="col-sm-12 align-self-center">
                                             <h4>Epsum dolor sit</h4>
                                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit repudiandae impedit distinctio cumque nihil non deserunt corporis doloremque cupiditate dignissimos sed, aspernatur officiis dolorum doloribus placeat dicta esse, numquam natus.
                                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, maxime vero! Voluptatum, nihil doloremque! Sed praesentium animi magnam. Perferendis doloribus perspiciatis expedita omnis officiis nobis quaerat, ullam quasi nesciunt vero.</p>
                                             <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium et repellendus veritatis dolore molestiae autem provident natus perspiciatis nesciunt recusandae quod earum, non id ipsa totam? Sunt voluptatibus quas quibusdam.
                                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic saepe maxime rerum earum quia ullam nobis porro exercitationem, distinctio ducimus in dolorum perspiciatis. Tempora sapiente natus reiciendis cum tempore repellendus.
                                             </p>
-                                        </div>
-                                        <div class="col-sm-6">
                                             <h4>Epsum dolor sit</h4>
                                             <ul class="content-links">
                                                 <li><a href="#">Lorem ipsum dolor sit</a></li>
                                                 <li><a href="#">consectetur adipisicing </a></li>
                                                 <li><a href="#">Lorem ipsum dolor sit</a></li>
                                                 <li><a href="#">consectetur adipisicing </a></li>
-                                                <li><a href="#">Lorem ipsum dolor sit</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-sm-6">
-                                            <h4>Epsum dolor sit</h4>
-                                            <ul class="content-links">
-                                                <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                                <li><a href="#">consectetur adipisicing </a></li>
-                                                <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                                <li><a href="#">consectetur adipisicing </a></li>
-                                                <li><a href="#">Lorem ipsum dolor sit</a></li>
-                                            </ul>
-                                        </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -463,31 +451,31 @@
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
                                             <div class="img-block rev-gray-scale"> <img src="img/team-02.jpg" alt="images description" /> </div>
-                                            <figcaption class="text-center"> <strong class="content-title mb-0">Hiking</strong> <span class="sub">$400</span> </figcaption>
+                                            <figcaption class="text-center"> <strong class="content-title mb-0">Hiking</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
                                             <div class="img-block rev-gray-scale"> <img src="img/team-01.jpg" alt="images description" /> </div>
-                                            <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">$500</span> </figcaption>
+                                            <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
                                             <div class="img-block rev-gray-scale"> <img src="img/team-03.jpg" alt="images description" /> </div>
-                                            <figcaption class="text-center"> <strong class="content-title mb-0">James nass</strong> <span class="sub">$600</span> </figcaption>
+                                            <figcaption class="text-center"> <strong class="content-title mb-0">James nass</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
                                             <div class="img-block rev-gray-scale"> <img src="img/team-02.jpg" alt="images description" /> </div>
-                                            <figcaption class="text-center"> <strong class="content-title mb-0">Steve manning</strong> <span class="sub">$700</span> </figcaption>
+                                            <figcaption class="text-center"> <strong class="content-title mb-0">Steve manning</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                     <div class="slide-item">
                                         <figure class="team-box caption-fade-up">
                                             <div class="img-block rev-gray-scale"> <img src="img/team-01.jpg" alt="images description" /> </div>
-                                            <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">$800</span> </figcaption>
+                                            <figcaption class="text-center"> <strong class="content-title mb-0">Jessica fizovic</strong> <span class="sub">Lorem ipsum dolor</span> </figcaption>
                                         </figure>
                                     </div>
                                 </div>
@@ -500,29 +488,29 @@
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="col-wrap">
                                         <div class="icon"> <i class="fa-regular fa-face-smile"></i> </div>
-                                        <h3 class="number">95621</h3>
-                                        <div class="text text-uppercase">Happy Customer</div>
+                                        <h3 class="number">9562</h3>
+                                        <div class="text">Happy Customer</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="col-wrap">
                                         <div class="icon"> <i class="fa-solid fa-location-dot"></i> </div>
                                         <h3 class="number">1586</h3>
-                                        <div class="text text-uppercase">Adventure Places</div>
+                                        <div class="text">Adventure Places</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="col-wrap">
                                         <div class="icon"> <i class="fa-solid fa-hat-cowboy"></i> </div>
                                         <h3 class="number">720</h3>
-                                        <div class="text text-uppercase">Trip Facilitator</div>
+                                        <div class="text">Trip Facilitator</div>
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="col-wrap">
                                         <div class="icon"> <i class="fa-solid fa-globe"></i> </div>
                                         <h3 class="number">150</h3>
-                                        <div class="text text-uppercase">countries</div>
+                                        <div class="text">countries</div>
                                     </div>
                                 </div>
                             </div>
@@ -531,7 +519,7 @@
                     <section class="content-block bg-gray-light">
                         <div class="container">
                             <div class="bottom-space text-center"> <span class="big">Sub Heading</span>
-                                <h2><span class="heading-decore">TESTIMONIALS</span></h2>
+                                <h2><span class="heading-decore">Testimonials</span></h2>
                             </div>
                             <div class="testimonial-container text-center">
                                 <div class="owl-carousel testimonial-slide" id="Excursion-owl-slide-3">
@@ -541,7 +529,7 @@
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
-                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, velit officia vitae incidunt iusto numquam provident quo architecto delectus modi ratione quod voluptatum eos non magnam iste mollitia voluptates accusantium.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -551,7 +539,7 @@
                                             <div class="text-wrap">
                                                 <h2>Jason Doe</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
-                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, velit officia vitae incidunt iusto numquam provident quo architecto delectus modi ratione quod voluptatum eos non magnam iste mollitia voluptates accusantium.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -561,7 +549,7 @@
                                             <div class="text-wrap">
                                                 <h2>Jake Grahm</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
-                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, velit officia vitae incidunt iusto numquam provident quo architecto delectus modi ratione quod voluptatum eos non magnam iste mollitia voluptates accusantium.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -571,7 +559,7 @@
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
-                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, velit officia vitae incidunt iusto numquam provident quo architecto delectus modi ratione quod voluptatum eos non magnam iste mollitia voluptates accusantium.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -581,7 +569,7 @@
                                             <div class="text-wrap">
                                                 <h2>Natalie Fullick</h2> 
                                                 <h4 class="designation">John Kennedy</h4>
-                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                                                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem, velit officia vitae incidunt iusto numquam provident quo architecto delectus modi ratione quod voluptatum eos non magnam iste mollitia voluptates accusantium.</p>
                                             </div>
                                         </div>
                                     </div>
