--- a/portfolio-single.html
+++ b/portfolio-single.html
@@ -255,15 +255,15 @@
                     </div>
                     <section class="content-block">
                         <div class="container-fluid">
-                            <div class="text-center bottom-space"> <span class="big">Sub Heading</span>
-                                <h2><span class="heading-decore">Our Adventure Activity</span></h2>
+                            <div class="text-center bottom-space"> <span class="big">Unforgettable Adventure with Us!</span>
+                                <h2><span class="heading-decore">Dive Deep into Our Adventure Activities</span></h2>
                             </div>
                         </div>
                         <div class="container">
                             <div class="portfolio-des">
                                 <div class="row">
                                     <div class="col-lg-6 bottom-space-medium-only">
-                                        <h4>Our Adventure Activity</h4>
+                                        <!--<h4>Our Adventure Activity</h4>-->
                                         <ul class="content-list info-list">
                                             <li class="row ">
                                                 <div class="col">
@@ -313,19 +313,19 @@
                                         </ul>
                                         <div class="text-block top-space">
                                             <h4 class="text-block-title">Project Detail:</h4>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                                            <p>Welcome to our thrilling world of adventure sports, where adrenaline meets the extraordinary! Our portfolio is a testament to the daring spirit and the exhilarating experiences that await those who seek the thrill of the unknown.</p>
+                                            <p>Embark on a journey of heart-pounding descents and challenging ascents as you navigate through rugged terrains and breathtaking landscapes. Our mountain biking adventures are designed for adrenaline junkies and nature lovers alike. Conquer the trails, feel the wind rush past you, and experience the sheer joy of conquering nature's obstacles.</p>
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
-                                        <h4>Our Adventure Activity</h4>
+                                        <!--<h4>Our Adventure Activities</h4>-->
                                         <div class="text-block">
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-                                            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-                                            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit.</p>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
-                                            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+                                            <p>Take the plunge and defy gravity as you soar through the sky in an exhilarating skydiving escapade. From the moment you leap from the plane to the serene descent under the parachute, our skydiving experiences promise an unmatched blend of fear and freedom. Scale towering cliffs and conquer vertical challenges in our rock climbing adventures. Whether you're a beginner or a seasoned climber, our expert guides ensure a safe yet thrilling climb, surrounded by stunning natural beauty.</p>
+                                            <p>Brace yourself for the rush of crashing waves and swirling rapids in our whitewater rafting adventures. Team up with fellow adventurers as you navigate through challenging waters, creating memories of camaraderie and triumph.</p>
+                                            <p>Soar through the treetops and embrace the sensation of flight in our zip-lining adventures. Our carefully designed zip-line courses offer a perfect blend of excitement and natural beauty, providing an unforgettable experience for thrill-seekers of all ages.</p>
+                                            <p>Glide through the air like a bird and savor the stunning landscapes below. Our paragliding excursions offer a perfect blend of serenity and excitement, providing an experience like no other.</p>
+                                            <p>Navigate the roaring rapids as you conquer the untamed rivers. Whether you're a beginner seeking a family-friendly outing or an experienced rafter craving the challenge of Class V rapids, our trips promise a wet and wild adventure.</p>
+                                            <p>Climb to new heights and conquer breathtaking cliffs with our expert guides. From beginner-friendly ascents to advanced multi-pitch climbs, our rock climbing experiences cater to all skill levels.</p>
                                             
                                         </div>
                                     </div>
@@ -338,8 +338,8 @@
                         <div class="container">
                             <div class="demo-wrapper">
                                 <div class="container-fluid">
-                                    <div class="text-center bottom-space"> <span class="big">Sub Heading</span>
-                                        <h2><span class="heading-decore">Our Adventure Activity</span></h2>
+                                    <div class="text-center bottom-space"> <span class="big">Embark on Thrilling Escapades</span>
+                                        <h2><span class="heading-decore">Our Signature Adventure Activities</span></h2>
                                     </div>
                                 </div>
                                 <div class="row masonary-block default-gallery">
