--- a/portfolio.html
+++ b/portfolio.html
@@ -259,20 +259,21 @@
                    
                     <section class="content-block portfolio-block eighty-percent">
                         <div class="container-fluid">
-                            <div class="text-center bottom-space"> <span class="big">Sub Heading</span>
-                                <h2><span class="heading-decore">Our Adventure Activity</span></h2>
+                            <div class="text-center bottom-space"> <span class="big">Explore, Dream, Discover – Adventure Awaits!</span>
+                                <h2><span class="heading-decore">Our Adventure Activities</span></h2>
                             </div>
                         </div>
                         <ul class="filter-nav text-center button-group filter-button-group">
-                            <li> <button data-filter="*">ALL</button> </li>
-                            <li> <button data-filter=".first">Rock Climbing</button> </li>
-                            <li> <button data-filter=".second">Sky Diving</button> </li>
-                            <li> <button data-filter=".third">Surfing</button> </li>
-                            <li> <button data-filter=".fourth">Scuba Diving</button> </li>
+                            <li> <button data-filter="*">All</button> </li>
+                            <li> <button data-filter=".first">Land Adventures</button> </li>
+                            <li> <button data-filter=".second">Water Adventures</button> </li>
+                            <li> <button data-filter=".third">Air Adventures</button> </li>
+                            <li> <button data-filter=".fourth">Winter Adventures</button> </li>
+                            <li> <button data-filter=".fifth">Motorized Adventures</button> </li>
                         </ul>
                         <div class="container-fluid">
                             <div class="row masonary-block grid">
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 first third">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 first">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio_Listing_1.jpg" alt="images description"></div>
@@ -282,7 +283,7 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Trekking & Hiking</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -298,13 +299,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Rock Climbing</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 first second">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 fifth">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio_Listing_3.jpg" alt="images description"></div>
@@ -314,7 +315,7 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Cycling Raids</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -330,13 +331,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Snow Boarding</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 second first">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 second">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-5.jpg" alt="images description"></div>
@@ -346,13 +347,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Scuba Diving</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 third">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 second">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-6.jpg" alt="images description"></div>
@@ -362,7 +363,7 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">River Rafting</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -378,13 +379,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Surfing</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 fourth">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 second">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-8.jpg" alt="images description"></div>
@@ -394,13 +395,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Kayaking</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 fourth">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 fifth">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-9.jpg" alt="images description"></div>
@@ -410,7 +411,7 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Motorcycling</h2>
                                                 </div>
                                             </div>
                                         </div>
@@ -426,13 +427,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Hot Air Balloon Safaris</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 first second">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 first">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-11.jpg" alt="images description"></div>
@@ -442,13 +443,13 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Night Camping</h2>
                                                 </div>
                                             </div>
                                         </div>
                                     </figure>
                                 </div>
-                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 fourth">
+                                <div class="gallery-item col-md-6 col-lg-3 col-xl-3 third">
                                     <figure class="caption-hover-full">
                                         <a class="fancy-pop" href="portfolio-single.html"></a>
                                         <div class="image-wrapper"><img src="img/Portfolio-Listing-12.jpg" alt="images description"></div>
@@ -458,7 +459,7 @@
                                                     <i class="fa-solid fa-plus"></i>
                                                 </div>
                                                 <div class="info">
-                                                    <h2 class="content-title">Awesome Project</h2>
+                                                    <h2 class="content-title">Sky Diving</h2>
                                                 </div>
                                             </div>
                                         </div>
